# cartograph

./: .gitignore  README.md  config.json.example  derivation.nix  flake.nix  pyproject.toml  setup.py  shell.nix
cartograph/: __main__.py  geodata.py  latlng.py  main.py  photodata.py
cartograph/Templates/: index.jinja2
cartograph/static/css/: style.css
cartograph/static/js/: app.js  photodata.js  waypoints.js
